<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgetPasswordLayout"
    android:padding="20dp"
    tools:context="com.example.ebc003.pathologyapp.ActivityForgetPassword">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/pathology_icon"
        android:id="@+id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="#2e3b4e"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:text="@string/forgot_question_mark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:lines="2"
        android:textAlignment="center"
        android:textColor="#adbace"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:text="@string/forgot_description"/>
    <EditText
        android:id="@+id/forget_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:padding="10dp"
        android:textSize="18sp" />
    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="3dp"
        android:text="@string/send"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" />
</LinearLayout>