<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.ebc003.pathologyapp.ActivityChangePassword">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/pathology_icon"
        android:id="@+id/imageView" />
    <EditText
        android:id="@+id/edit_rest_password"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/new_password"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edit_rest_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:background="@color/light_blue"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_rest_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="3dp"
        android:text="@string/reset_password"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" />
</LinearLayout>
