<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebc003.pathologyapp.ResetPasswordSuccess">

    <ImageView
        android:id="@+id/ic_done"
        android:src="@drawable/ic_done"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/success"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:lines="2"
        android:layout_below="@+id/ic_done"/>

    <Button
       android:id="@+id/login_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:textColor="@color/white"
        android:layout_below="@+id/txtSuccess"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
