<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginLayout">
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_weight="0.90" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_txt"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/editTextEmail"
                android:drawableLeft="@drawable/email"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColorHint="@color/white"
                android:layout_marginTop="50dp"
                android:background="@drawable/drop_down_tv_background"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/password_button"
                android:id="@+id/editTextPassword"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="20dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/buttonLogin"
                android:text="@string/btn_login"
                android:textSize="17sp"
                android:textColor="#fff"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/mforgetpwd"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_blue"
                android:onClick="onRestPasswordActivity"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/light_blue"
            android:layout_height="50dp"
            android:layout_width="match_parent">
            <Button android:id="@+id/linkSignup"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/register_txt"
                android:textSize="17sp"
                android:background="@drawable/drop_down_tv_background"
                android:textColor="#ff6900"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>