<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/background_color">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addFamilyLayout"
        android:background="@color/background_color"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/add_your_family_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.MyApp.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            style="@style/Widget.MyApp.Toolbar.Solid"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >
            <EditText
                android:id="@+id/first_name_afm_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/firstName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/middle_name_afm_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/middleName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/last_name_afm_ett"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:gravity="center_vertical"
                android:hint="@string/lastName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_view_padding"
                android:paddingTop="@dimen/card_view_padding"
                android:weightSum="1">
                <ImageButton
                    android:text="@string/photo_button"
                    android:id="@+id/photoButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:contentDescription="@string/photo_button"
                    android:background="@drawable/calendar"/>
                <Button
                    android:id="@+id/age_afm_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/password_button"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/contact_no_afm_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:maxLength="10"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/email_afm_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/email"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/btn_member_relation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/familyMemberRelation"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:padding="15dp"
                android:text="@string/submit"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:onClick="OnClickAddFamilyMember"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>