<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_book" />
        <TextView
            android:id="@+id/card_view_test_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/test_type"/>
        <TextView
            android:id="@+id/card_view_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/timestamp"/>
        <TextView
            android:id="@+id/card_view_notification_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_test_type"
            android:layout_alignLeft="@+id/card_view_test_type"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:text="@string/notification_details"
            android:textSize="15sp"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>